--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/templates/templates.xml
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/templates/templates.xml
@@ -44,11 +44,13 @@
 &lt;/div&gt;&#13;
 &#13;
 &lt;div id="footer"&gt;&#13;
+  &lt;ui:insert name="content"&gt;&#13;
     	Footer area.  See comments below this line in the source.&#13;
     	&lt;!--  include your header file or uncomment the include below and create footer.xhtml in this directory --&gt;&#13;
 	    &lt;!-- ui:insert name="footer"&gt; --&gt;&#13;
 		&lt;!--    	&lt;ui:include src="footer.xhtml"/&gt;  --&gt;&#13;
 		&lt;!--  	&lt;/ui:insert&gt;--&gt;&#13;
+  &lt;/ui:insert&gt;&#13;
 &lt;/div&gt;&#13;
 &#13;
 &lt;/body&gt;&#13;
