--- a/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/templates/templates.xml
+++ b/org.eclipse.jsf/plugins/org.eclipse.jst.jsf.facelet.ui/templates/templates.xml
@@ -6,13 +6,13 @@
 &lt;title&gt;Insert title here&lt;/title&gt;&#13;
 &lt;/head&gt;&#13;
 &lt;body&gt;&#13;
-&lt;div style="background-color: navy;width: 100%;color: white"&gt;&lt;/div&gt;&#13;
+&lt;div style="background-color:navy;width:100&#37;;color:white"&gt;&lt;/div&gt;&#13;
 &lt;/body&gt;&#13;
 &lt;/html&gt;</template><template id="org.eclipse.jst.jsf.facelet.ui.new_header_xhtml" autoinsert="false" context="html_new" deleted="false" description="%New_Facelet_Header_Description" enabled="true" name="%New_Facelet_Header">&lt;?xml version="1.0" encoding="ISO-8859-1" ?&gt;&#13;
 &lt;!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"&gt;&#13;
 &lt;html xmlns="http://www.w3.org/1999/xhtml"&gt;&#13;
 &lt;body&gt;&#13;
-&lt;div style="font-size: 36px;line-height: 48px;background-color: navy;width: 100%;color: white"&gt;My Facelet Application&lt;/div&gt;&#13;
+&lt;div style="width:100&#37;;font-size:36px;line-height:48px;background-color:navy;color:white"&gt;My Facelet Application&lt;/div&gt;&#13;
 &lt;/body&gt;&#13;
 &lt;/html&gt;</template><template id="org.eclipse.jst.jsf.facelet.ui.new_basic_template_xhtml" autoinsert="false" context="html_new" deleted="false" description="%New_Facelet_Template_Description" enabled="true" name="%New_Facelet_Template">&lt;!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" &#13;
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"&gt;&#13;
@@ -33,7 +33,7 @@
 &lt;/div&gt;&#13;
 &#13;
 &#13;
-&lt;div id="center"&gt;&#13;
+&lt;div id="content"&gt;&#13;
   &lt;ui:insert name="content"&gt;&#13;
     	Content area.  See comments below this line in the source.&#13;
     	&lt;!--  include your content file or uncomment the include below and create content.xhtml in this directory --&gt;&#13;
@@ -44,12 +44,10 @@
 &lt;/div&gt;&#13;
 &#13;
 &lt;div id="footer"&gt;&#13;
-  &lt;ui:insert name="content"&gt;&#13;
+  &lt;ui:insert name="footer"&gt;&#13;
     	Footer area.  See comments below this line in the source.&#13;
     	&lt;!--  include your header file or uncomment the include below and create footer.xhtml in this directory --&gt;&#13;
-	    &lt;!-- ui:insert name="footer"&gt; --&gt;&#13;
-		&lt;!--    	&lt;ui:include src="footer.xhtml"/&gt;  --&gt;&#13;
-		&lt;!--  	&lt;/ui:insert&gt;--&gt;&#13;
+		&lt;!--&lt;ui:include src="footer.xhtml"/&gt;  --&gt;&#13;
   &lt;/ui:insert&gt;&#13;
 &lt;/div&gt;&#13;
 &#13;
@@ -71,7 +69,7 @@
 	    Add your content here or delete to use the default&#13;
 	&lt;/ui:define&gt;&#13;
 	&lt;ui:define name="footer"&gt;&#13;
-	    Add your content here or delete to use the default&#13;
+	    Add your footer here or delete to use the default&#13;
 	&lt;/ui:define&gt;&#13;
 &lt;/ui:composition&gt;&#13;
 &lt;/html&gt;</template></templates>
