--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/format.css
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/format.css
@@ -5,21 +5,21 @@ body {
 }
 
 h1 {
-	font-size: 1.5em;
-	font-style: normal;
-	color: #333;
-} 		
-
-h2 {
 	font-size: 1.3em;
 	font-style: normal;
-	color: #666;
-}		
+	color: #333;
+}
+
+h2 {
+	font-size: 1.2em;
+	font-style: normal;
+	color: #333;
+}
 
 h3 {
 	font-size: 1.1em;
 	font-style: normal;
-	color: #666;
+	color: #333;
 }
 
 div {
@@ -27,9 +27,13 @@ div {
 	text-decoration: none;
 }
 
-p, td, ul, ol {
+p, ul, ol {
 	font-size: 1em;
 	text-decoration: none;
+}
+
+ul.NavList li {
+	list-style-type: none;
 }
 
 img {
@@ -45,48 +49,6 @@ em {
 	font-style: italic;
 }
 
-table {
-	border-color: none;
-	width: 99%;
-	margin-left: 0.5%;
-}
-
-th {
-	font-size: 1em;
-	font-weight: bold;
-	color: #695d54;
-	text-decoration: none;
-	background-color: #ccc;
-	text-align: left;
-}
-
-td {
-	font-size: 1.0em;
-}
-
-tr.even {
-	font-size: 1.0em;
-	background-color: #fff;
-	vertical-align: top;
-}
-
-tr.uneven {
-	font-size: 1.0em;
-	background-color: #eee;
-	vertical-align: top;
-}
-
-div.code {
-	background-color: #fff;
-	border-left-width: 8px;
-	border-left-color: #ccc;
-	border-left-style: solid;
-	padding-left: 15px;
-	margin-left: 5px;
-	font-family: "Courier New", Courier, monospace;
-	font-size: 1.1em;
-}
-		 		 
 a:link, a:visited, a:hover, a:active {
 	font-size: 1em;
 	text-decoration: none;
@@ -94,20 +56,4 @@ a:link, a:visited, a:hover, a:active {
 }
 a:hover {
 	text-decoration: underline;
-}	 		   
-
-a.c:link, a.c:visited, a.c:hover, a.c:active {
-	font-family: "Courier New", Courier, monospace;
-	font-size: 0.9em;
-	text-decoration: none;
-	color: #00f;
 }
-a.c:hover {
-	text-decoration: underline;
-}
-
-.resource {
-  background-color: #ccc;
-  padding: 3pt;
-}
-
