[283980]: VEX stack overflow with thead insertion.

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/css/topic.css
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/css/topic.css
@@ -408,6 +408,7 @@ table {
 }
 
 thead > row > entry    {
+	display: table-cell;
 	font-weight: bold;
 }
 
@@ -432,7 +433,7 @@ row    {
 }
 
 entry    {
-	display: table-entry;
+	display: table-cell;
 	border: thin solid black;
 }
 
