--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/css/topic_classed.css
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/css/topic_classed.css
@@ -434,7 +434,7 @@ expanse (page|column|textline) #IMPLIED
 }
 
 *[class~="topic\/entry"]    {
-  display: table-entry;
+  display: table-cell;
   border: thin solid black;
 }
 
