bug 298912 added image support for DocBook
Signed-off-by: Florian Thienel <florian@thienel.org>

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/styles/docbook-plain.css
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/styles/docbook-plain.css
@@ -363,6 +363,11 @@ glossentry>glossterm {
 	margin: 20px 0;
 }
 
+graphic: {
+	display: block;
+	background-image: attr(fileref);
+}
+
 holder {
 	display: inline;
 }
@@ -373,6 +378,7 @@ honorific {
 
 imagedata {
 	display: inline;
+	background-image: attr(fileref);
 }
 
 imageobject {
