bug 298912 add image support for DITA

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/css/dita_classed_shell_vex.css
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/css/dita_classed_shell_vex.css
@@ -24,3 +24,11 @@
 entry {
   display: table-cell;
 }
+
+*[class~="topic\/image"] {
+	background-image: attr(href);
+}
+
+*[class~="topic\/image"][placement="break"] {
+	display: block;
+}
