bug 329633 added image support also for the inlinegraphic element
Signed-off-by: Florian Thienel <florian@thienel.org>

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/styles/docbook-plain.css
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/styles/docbook-plain.css
@@ -403,6 +403,11 @@ informaltable {
 	display: table;
 }
 
+inlinegraphic {
+	display: inline;
+	background-image: attr(fileref);
+}
+
 inlinemediaobject {
 	display: inline;
 }
