bug 329633 added rule to display inlinemediaobject inline
Signed-off-by: Florian Thienel <florian@thienel.org>

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/styles/docbook-plain.css
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/styles/docbook-plain.css
@@ -376,6 +376,10 @@ honorific {
 	display: inline;
 }
 
+inlinemediaobject>imageobject>imagedata {
+	display: inline;
+}
+
 imagedata {
 	display: block;
 	background-image: attr(fileref);
