bug 331615 added image support
Signed-off-by: Florian Thienel <florian@thienel.org>

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.xhtml/styles/xhtml1-plain.css
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.xhtml/styles/xhtml1-plain.css
@@ -188,12 +188,14 @@ i {
 }
 
 img {
+  background-image: attr(src);
+  height: attr(height);
+  width: attr(width);
 }
 
-img:before {
-  background-color: #ccc;
-  content: "(img)";
-  padding: 3px;
+img:after {
+  display: block;
+  content: attr(title);
 }
 
 input {
